[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
version = "1.1.0"
name = "robotblockset"
description = "RobotBlockSet (RBS) allows control of various robots in simulatoion environments and real-world applications."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Leon Zlajpah", email = "leon.zlajpah@ijs.si" },
]
keywords = [
  "robotics",
  "robot-control",
  "robot-modelling",
  "robot-kinematics",
  "motion-generation",
  "trajectory-generation",
  "path-planning",
  "collision-free-motion-planning",
  "multi-robot-systems",
  "mobile-platforms",  
  "mobile-robots",
  "real-robot-control",
  "robot-simulation",
  "mujoco",
  "ompl",
  "franka-robotics-python",
  "universal-robots_rtde",
  "ros",
  "ros2",
  "coppelia-sim",
  "genesis-world",
  "camera-calibration",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "numpy>=1.24",
  "quaternionic>=1.0.12",
  "matplotlib>=3.7.5",
  "scipy",
  "sympy",
  "pyyaml",
  "mujoco", 
  "mediapy",
  "ipython",
]

[project.urls]
Homepage = "https://github.com/abr-ijs/robotblockset_python"

[project.optional-dependencies]
models = ["yourdfpy"]
docs = ["sphinx>=8,<9", "sphinx-rtd-theme>=3,<4", "myst-parser>=3,<5"]
mjcf = ["robotblockset-mjcf"]
franka = ["panda-python"]
ur = ["ur_rtde"]
robotiq = ["pyRobotiqGripper"]
path = ["ompl"]
cameras = ["opencv-contrib-python", "pyrealsense2", "open3d", "pydantic", "pypylon"]
genesis = ["genesis-world", "torch"]
coppelia = ["coppeliasim-zmqremoteapi-client"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["robotblockset", "robotblockset.*"]
